added images for gradient

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 </head>
 
 <body>
-  <a href="http://github.com/northscale/moxi"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
   
   <div id="container">
 
@@ -62,9 +61,73 @@ check, a C unit test framework (needed only to test)
 <h2>License</h2>
 <p>BSD</p>
 <h2>Authors</h2>
-<p>Trond Norbye (Trond.Norbye@sun.com)<br/>Victor Kirkebo (Victor.Kirkebo@Sun.COM)<br/>Léon Brocard (acme@astray.com)<br/>Adam Dixon (adamtdixon@gmail.com)<br/>Andrei Nigmatulin (anight@monamour.ru)<br/>Aaron Stone (astone@sixapart.com)<br/>Brad Fitzpatrick (brad@danga.com)<br/>David Bremner (bremner@unb.ca)<br/>Brian Aker (brian@tangent.org)<br/>Brion Vibber (brion@pobox.com)<br/>Chris Goffinet (cg@chrisgoffinet.com)<br/>Paul Querna (chip@force-elite.com)<br/>Cosimo Streppone (cosimo@opera.com)<br/>Dan Christian (dchristian@google.com)<br/>Toru Maesaka (dev@torum.net)<br/>Don MacAskill (don@smugmug.com)<br/>dormando (dormando@rydia.net)<br/>Eric Hodel (drbrain@segment7.net)<br/>Doug Porter (dsp@dsp.name)<br/>Dustin Sallings (dustin@spy.net)<br/>js (ebgssth@gmail.com)<br/>David Phillips (electrum@gmail.com)<br/>Eli Bingham (eli@pandora.com)<br/>Evan Miller (emiller@imvu.com)<br/>Eric Lambert (eric.lambert@sun.com)<br/>Evan Klitzke (evan@eklitzke.org)<br/>Filipe Laborde (fil@rezox.com)<br/>hachi (hachi@kuiki.net)<br/>Matt Ingenthron (ingenthr@cep.net)<br/>Iain Wade (iwade@optusnet.com.au)<br/>Jamie McCarthy (jamie@mccarthy.vg)<br/>Jay Bonci (jaybonci@debian.org)<br/>Jeff Lawson (jeff_lawson@ud.com)<br/>Jean-Francois BUSTARRET (jfbustarret@wat.tv)<br/>Jonathan Bastien-Filiatrault (joe@x2a.org)<br/>Jason Titus (jtitus@postini.com)<br/>Tim Yardley (liquid@haveheart.com)<br/>Lisa Seelye (lisa@gentoo.org)<br/>Elizabeth Mattijsen (liz@dijkmat.nl)<br/>Evan Martin (martine@danga.com)<br/>Michael Alan Dorman (mdorman@debian.org)<br/>Maxim Dounin (mdounin@mdounin.ru)<br/>Anatoly Vorobey (mellon@pobox.com)<br/>Nathan Neulinger (nneul@umr.edu)<br/>Paolo Borelli (pborelli@katamail.com)<br/>Peter van Dijk (peter@nextgear.nl)<br/>Paul Lindner (plindner@hi5.com)<br/>Ricky Zhou (rickyz@cmu.edu)<br/>River Tarnell (river@attenuate.org)<br/>Ryan T. Dean (rtdean@cytherianage.net)<br/>Richard Russo (russor@msoe.edu)<br/>Steven Grimm (sgrimm@facebook.com)<br/>Artur Bergman (sky@crucially.net)<br/>Steve Yen (steve.yen@gmail.com)<br/>Steve Peters (steve@fisharerojo.org)<br/>Tao Hui (taohui3@gmail.com)<br/>Thomas van Gulick (thomas@partyflock.nl)<br/>Tomash Brechko (tomash.brechko@gmail.com)<br/>Torsten Foertsch (torsten.foertsch@gmx.net)<br/>Ted Schundler (tschundler@gmail.com)<br/>Clinton Webb (webb.clint@gmail.com)<br/>Steve Yen (steve.yen@northscale.com)<br/>Matt Ingenthron (ingenthr@cep.net)<br/>      </p>
+<p>Trond Norbye (Trond.Norbye@sun.com)
+<br/>Victor Kirkebo (Victor.Kirkebo@Sun.COM)
+<br/>Léon Brocard (acme@astray.com)
+<br/>Adam Dixon (adamtdixon@gmail.com)
+<br/>Andrei Nigmatulin (anight@monamour.ru)
+<br/>Aaron Stone (astone@sixapart.com)
+<br/>Brad Fitzpatrick (brad@danga.com)
+<br/>David Bremner (bremner@unb.ca)
+<br/>Brian Aker (brian@tangent.org)
+<br/>Brion Vibber (brion@pobox.com)
+<br/>Chris Goffinet (cg@chrisgoffinet.com)
+<br/>Paul Querna (chip@force-elite.com)
+<br/>Cosimo Streppone (cosimo@opera.com)
+<br/>Dan Christian (dchristian@google.com)
+<br/>Toru Maesaka (dev@torum.net)
+<br/>Don MacAskill (don@smugmug.com)
+<br/>dormando (dormando@rydia.net)
+<br/>Eric Hodel (drbrain@segment7.net)
+<br/>Doug Porter (dsp@dsp.name)
+<br/>Dustin Sallings (dustin@spy.net)
+<br/>js (ebgssth@gmail.com)
+<br/>David Phillips (electrum@gmail.com)
+<br/>Eli Bingham (eli@pandora.com)
+<br/>Evan Miller (emiller@imvu.com)
+<br/>Eric Lambert (eric.lambert@sun.com)
+<br/>Evan Klitzke (evan@eklitzke.org)
+<br/>Filipe Laborde (fil@rezox.com)
+<br/>hachi (hachi@kuiki.net)
+<br/>Matt Ingenthron (ingenthr@cep.net)
+<br/>Iain Wade (iwade@optusnet.com.au)
+<br/>Jamie McCarthy (jamie@mccarthy.vg)
+<br/>Jay Bonci (jaybonci@debian.org)
+<br/>Jeff Lawson (jeff_lawson@ud.com)
+<br/>Jean-Francois BUSTARRET (jfbustarret@wat.tv)
+<br/>Jonathan Bastien-Filiatrault (joe@x2a.org)
+<br/>Jason Titus (jtitus@postini.com)
+<br/>Tim Yardley (liquid@haveheart.com)
+<br/>Lisa Seelye (lisa@gentoo.org)
+<br/>Elizabeth Mattijsen (liz@dijkmat.nl)
+<br/>Evan Martin (martine@danga.com)
+<br/>Michael Alan Dorman (mdorman@debian.org)
+<br/>Maxim Dounin (mdounin@mdounin.ru)
+<br/>Anatoly Vorobey (mellon@pobox.com)
+<br/>Nathan Neulinger (nneul@umr.edu)
+<br/>Paolo Borelli (pborelli@katamail.com)
+<br/>Peter van Dijk (peter@nextgear.nl)
+<br/>Paul Lindner (plindner@hi5.com)
+<br/>Ricky Zhou (rickyz@cmu.edu)
+<br/>River Tarnell (river@attenuate.org)
+<br/>Ryan T. Dean (rtdean@cytherianage.net)
+<br/>Richard Russo (russor@msoe.edu)
+<br/>Steven Grimm (sgrimm@facebook.com)
+<br/>Artur Bergman (sky@crucially.net)
+<br/>Steve Yen (steve.yen@gmail.com)
+<br/>Steve Peters (steve@fisharerojo.org)
+<br/>Tao Hui (taohui3@gmail.com)
+<br/>Thomas van Gulick (thomas@partyflock.nl)
+<br/>Tomash Brechko (tomash.brechko@gmail.com)
+<br/>Torsten Foertsch (torsten.foertsch@gmx.net)
+<br/>Ted Schundler (tschundler@gmail.com)
+<br/>Clinton Webb (webb.clint@gmail.com)
+<br/>Steve Yen (steve.yen@northscale.com)
+<br/>Matt Ingenthron (ingenthr@cep.net)
+<br/>      </p>
 <h2>Contact</h2>
-<p> (admin_github@northscale.com)<br/>      </p>
+<p> (admin_github@northscale.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
@@ -77,6 +140,13 @@ check, a C unit test framework (needed only to test)
       by running:
       <pre>$ git clone git://github.com/northscale/moxi</pre>
     </p>
+
+    <p><div id="disqus_thread"></div><script type="text/javascript"
+    src="http://disqus.com/forums/labsnorthscale/embed.js"></script>
+    <noscript><a href="http://labsnorthscale.disqus.com/?url=ref">View the
+    discussion thread.</a></noscript><a href="http://disqus.com"
+    class="dsq-brlink">comments powered by
+    <span class="logo-disqus">Disqus</span></a></p>
       
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/northscale/moxi">northscale/moxi</a>
@@ -93,5 +163,20 @@ try {
 var pageTracker = _gat._getTracker("UA-0000000-1");
 pageTracker._trackPageview();
 } catch(err) {}</script>
+<script type="text/javascript">
+//<![CDATA[
+(function() {
+		var links = document.getElementsByTagName('a');
+		var query = '?';
+		for(var i = 0; i < links.length; i++) {
+			if(links[i].href.indexOf('#disqus_thread') >= 0) {
+				query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+			}
+		}
+		document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/labsnorthscale/get_num_replies.js' + query + '"></' + 'script>');
+	})();
+//]]>
+</script>
+
 </body>
 </html>
