added google analytics tracking code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             h1 a { text-decoration: none }
             h2 { font-size: 1.5em; }
             h3 { font-style: italic; }
-            a { text-decoration:none; 
+            a { text-decoration:none;
                 color: black; }
             a:visited { color:black; }
             a:hover { text-decoration:underline; }
@@ -56,8 +56,8 @@
             <br>
 
             <p>NorthScale builds upon other great Open Source projects and
-            releases Open Source to the community in the process.  This site
-            lists various projects NorthScale has contributed to and is involved
+                releases Open Source to the community in the process.  This site
+                lists various projects NorthScale has contributed to and is involved
             in.</p>
 
             <h2>moxi</h2>
@@ -73,7 +73,7 @@
             </p>
             <h3>Installation</h3>
             <p>Packages will shortly be available for the most common platforms, and that
-            is the preferred method of installation.  Otherwise, the source is
+                is the preferred method of installation.  Otherwise, the source is
             automake/autconf based and should build on most UNIX like systems.</p>
             <h3>License</h3>
             <p>BSD</p>
@@ -131,6 +131,16 @@
             })();
             //]]>
         </script>
+
+        <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+        </script>
+        <script type="text/javascript">
+            try {
+                var pageTracker = _gat._getTracker("UA-7763794-3");
+                pageTracker._trackPageview();
+            } catch(err) {}</script>
 
     </body>
 </html>
