--- a/index.html
+++ b/index.html
@@ -3,144 +3,11 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
-        <title>NorthScale Labs</title>
-
-        <LINK REL=StyleSheet HREF="css/default.css" TYPE="text/css" MEDIA=screen>
-
-        <style type="text/css">
-            @import url(css/default.css);
-            body {
-                margin-top: 1.0em;
-                font-family: "helvetica";
-                color: #000000;
-                background: url(images/body_gradient.png) 0% 0% repeat-x;
-                background-color: #79978f;
-            }
-            #container {
-                margin: 0 auto;
-                width: 700px;
-            }
-            h1 { font-size: 2.8em; margin-bottom: 38px; }
-            h1 .small { font-size: 0.4em; }
-            h1 a { text-decoration: none }
-            h2 { font-size: 1.5em; }
-            h3 { font-style: italic; }
-            a { text-decoration:none;
-                color: black; }
-            a:visited { color:black; }
-            a:hover { text-decoration:underline; }
-            .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-            .download { float: right; }
-            pre { background: #000; color: #fff; padding: 15px;}
-            hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-            .footer { text-align:center; padding-top:30px; font-style: italic; }
-        </style>
-
+     <title>moxi documentation</title>
     </head>
-
     <body>
-
-        <div id="container">
-
-            <div class="download">
-                <a href="http://github.com/northscale/moxi/zipball/master">
-                <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-                <a href="http://github.com/northscale/moxi/tarball/master">
-                <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-            </div>
-
-            <h1>NorthScale Labs</h1>
-
-            <br>
-
-            <p>NorthScale builds upon other great Open Source projects and
-                releases Open Source to the community in the process.  This site
-                lists various projects NorthScale has contributed to and is involved
-            in.</p>
-
-            <h2>moxi</h2>
-
-            <div class="description">
-                a memcached proxy with energy and pep
-            </div>
-
-            <p>Moxi is a memcached proxy with several features that can help keep the memcached contract whole in complicated environments.  It brings several optimizations to memcached deployments without requiring any changes to the application software using memcached.</p><h2>Dependencies</h2>
-            <p>libmemcached (specific version, statically linked and bundled)
-                libevent
-                check, a C unit test framework (needed only to test)
-            </p>
-            <h3>Installation</h3>
-            <p>Packages will shortly be available for the most common platforms, and that
-                is the preferred method of installation.  Otherwise, the source is
-            automake/autconf based and should build on most UNIX like systems.</p>
-            <h3>License</h3>
-            <p>BSD</p>
-
-            <h3>Contact</h3>
-            <p> feedback@northscale.com
-            <br/>      </p>
-            <p>Alternatively, you may post comments below</p>
-
-
-            <h3>Download</h3>
-            <!-- p>
-                You can download this project in either
-                <a href="http://github.com/northscale/moxi/zipball/master">zip</a> or
-                <a href="http://github.com/northscale/moxi/tarball/master">tar</a> formats.
-            </p -->
-            <p>You can clone the project with <a href="http://git-scm.com">Git</a>
-                by running:
-                <pre>$ git clone git://github.com/northscale/moxi</pre>
-            </p>
-
-            <p><div id="disqus_thread"></div><script type="text/javascript"
-                                                         src="http://disqus.com/forums/labsnorthscale/embed.js"></script>
-                <noscript><a href="http://labsnorthscale.disqus.com/?url=ref">View the
-                discussion thread.</a></noscript><a href="http://disqus.com"
-                                                    class="dsq-brlink">comments powered by
-            <span class="logo-disqus">Disqus</span></a></p>
-
-            <div class="footer">
-                get the source code on GitHub : <a href="http://github.com/northscale/moxi">northscale/moxi</a>
-            </div>
-
-        </div>
-
-        <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-        <script type="text/javascript">
-            try {
-                var pageTracker = _gat._getTracker("UA-0000000-1");
-                pageTracker._trackPageview();
-            } catch(err) {}</script>
-        <script type="text/javascript">
-            //<![CDATA[
-            (function() {
-                var links = document.getElementsByTagName('a');
-                var query = '?';
-                for(var i = 0; i < links.length; i++) {
-                    if(links[i].href.indexOf('#disqus_thread') >= 0) {
-                        query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
-                    }
-                }
-                document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/labsnorthscale/get_num_replies.js' + query + '"></' + 'script>');
-            })();
-            //]]>
-        </script>
-
-        <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-        <script type="text/javascript">
-            try {
-                var pageTracker = _gat._getTracker("UA-7763794-3");
-                pageTracker._trackPageview();
-            } catch(err) {}</script>
-
+      More docs coming soon... For now, please look to the 
+      <a href="http://wiki.github.com/steveyen/moxi">wiki</a> for any 
+      documentation.
     </body>
 </html>
