updates to moxi as a project name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-    <title>NorthScale Labs:Moxi</title>
+    <title>NorthScale Labs:memcached moxi</title>
 
     <link id="master_css" rel="stylesheet" type="text/css" href="/css/default.css"/>
 
@@ -21,17 +21,17 @@
     <div id="container">
 
 
-      <h1>Moxi by NorthScale</h1>
+      <h1>memcached moxi by NorthScale</h1>
 
-      <h2>moxi</h2>
+      <h2>memcached moxi</h2>
 
-      <p>Moxi is a memcached proxy with several features
+      <p>memcached moxi is a proxy for memcached protocol with several features
         which can help
         keep the memcached contract whole in complicated environments.  It
         brings several optimizations to memcached deployments without
         requiring any changes to the application software using memcached.</p>
 
-      <p>For instance, moxi has:</p>
+      <p>For instance, memcached moxi has:</p>
 
       <ul>
         <li>A "get" deduplication optimization allowing many requests
@@ -50,7 +50,7 @@
         We at NorthScale of course have a variety of other ideas on where
         we may be able to take moxi and memcached, since we've long been users
         and helped many others make use of Open Source memcached in their
-        applications.  In releasing moxi as Open Source, we hope to have
+        applications.  In releasing memcached moxi as Open Source, we hope to have
         others join in using or defining these features.  Join us on the
         <a href="http://groups.google.com/group/moxi">discussion group</a>
         if you want to collaborate!
