--- a/index.html
+++ b/index.html
@@ -174,8 +174,7 @@
 
       <pre>$ make test
 $ make check
-$ ./t/moxi_all.pl
-      </pre>
+$ ./t/moxi_all.pl</pre>
 
       <h3>License</h3>
       <p>New BSD</p>
