--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@ $ ./t/moxi_all.pl</pre>
         if you want to collaborate.
       </p>
 
+      <p>
+        Or, hit that fork button on http://github.com/northscale/moxi/tree/master
+      </p>
+
       <h3>Contact</h3>
 
       <p><a href="mailto:feeedback@northscale.com">feedback@northscale.com</a></p>
