--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@ $ ./t/moxi_all.pl</pre>
       </p>
 
       <p>
-        Or, hit that fork button on http://github.com/northscale/moxi/tree/master
+        Or, hit that fork button on
+        <a href="http://github.com/northscale/moxi/tree/master">
+        http://github.com/northscale/moxi/tree/master</a>
       </p>
 
       <h3>Contact</h3>
