links should be, well, links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
       <h3>Optimizations</h3>
       <ul>
         <li>
-          Multi-get Escalation and Protocol Pipelining - de-duplicates requests for popular keys, based on ideas from Dustin Sallings' spymemcached Java client library for memcached. See: http://code.google.com/p/spymemcached/wiki/Optimizations
+          Multi-get Escalation and Protocol Pipelining - de-duplicates
+          requests for popular keys, based on ideas from Dustin Sallings'
+          spymemcached Java client library for memcached. See:
+          <A HREF="http://code.google.com/p/spymemcached/wiki/Optimizations">code.google.com/p/spymemcached/wiki/Optimizations</a>
         </li>
         <li>
           Front cache - an L1 cache, to avoid network hops.
