--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
       </ul>
 
       <pre>$ make test
-$ make check
-$ ./t/moxi_all.pl</pre>
+$ make check</pre>
 
       <h3>License</h3>
       <p>New BSD</p>
