--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
       </ul>
 
       <pre>$ make test
-$ make check</pre>
+$ make check
+$ make test_moxi</pre>
 
       <h3>License</h3>
       <p>New BSD</p>
