northscale header now clickable

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
 
     <div id="header">
-      <img src="/images/ns_logo_labs.png" alt="NorthScale Labs" style="margin-top:10px;"/>
+      <a href="http://labs.northscale.com">
+        <img src="/images/ns_logo_labs.png" alt="NorthScale Labs" style="margin-top:10px;"/>
+      </a>
     </div>
 
     <div id="container">
