--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <h1>moxi</h1>
 
-      <h2>a modern memcached proxy with energy and pep</h2>
+      <h2>memcached + integrated proxy + more</h2>
 
       <p>moxi is a memcached proxy with several features which can
         help keep the memcached contract whole in complicated
@@ -121,6 +121,14 @@
           etc
         </li>
       </ul>
+
+      <h3>Presentations</h3>
+      <p>
+        A subset of these slides were presented at OSCON 2009 as a Lightning Talk -
+
+<div style="width:425px;text-align:left" id="__ss_1747476"><a style="font:14px Helvetica,Arial,Sans-serif;display:block;margin:12px 0 3px 0;text-decoration:underline;" href="http://www.slideshare.net/northscale/moxi-memcached-proxy" title="moxi - memcached + integrated proxy + more">memcached + integrated proxy + more</a><object style="margin:0px" width="425" height="355"><param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=moxiabout-090721035815-phpapp02&stripped_title=moxi-memcached-proxy" /><param name="allowFullScreen" value="true"/><param name="allowScriptAccess" value="always"/><embed src="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=moxiabout-090721035815-phpapp02&stripped_title=moxi-memcached-proxy" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="425" height="355"></embed></object><div style="font-size:11px;font-family:tahoma,arial;height:26px;padding-top:2px;">View more <a style="text-decoration:underline;" href="http://www.slideshare.net/">documents</a> from <a style="text-decoration:underline;" href="http://www.slideshare.net/northscale">NorthScale</a>.</div></div>
+
+      </p>
 
       <h3>Download</h3>
       <!--
