updated for 0.9.6 release

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
         environments.  It also brings several optimizations to
         memcached deployments, without requiring any changes to the
         application software using memcached.</p>
+      <p>See this <a href="moxi information 7.17.09.pdf">summary</a>
+        for a quick, highlevel overview.</p>
+
+      <h3>Obtaining</h3>
+      <p>Version 0.9.6 is the latest release of moxi, and it became
+      available on the 16th of August, 2009.  We plan for packages
+      of this release in both .deb and .rpm to be available soon.
+      Right now, the release is available via github as listed
+      below.  See the <a href="changelog.html">changelog</a> for some
+      clues on what has changed.</p>
 
       <h3>The basics</h3>
       <ul>
@@ -130,7 +140,7 @@
 
       </p>
 
-      <h3>Download</h3>
+      <h3>Obtaining the Source</h3>
       <!--
       <p>
       You can download this project in either
