--- a/changelog.html
+++ b/changelog.html
@@ -18,6 +18,27 @@
 <body>
 
 <h1>Changelog</h1>
+
+<h2>Changes from release 0.9.6 to 0.10.0</h2>
+<div><img class="pie" src="http://chart.apis.google.com/chart?cht=p&amp;chs=400x300&amp;chd=s:rIFEBAA&amp;chl=Steve|Aliaksey|Matt|Dustin|CaptTofu|Cosimo|Other" alt="contributors"/><pre>Release 0.10.0
+
+20091015 Patrick Galbraith <patg@northscale.com>
+Matt Ingenthron <ingenthron@northscale.com>,
+Aliaksey Kandratsenka <alkondratenko@gmail.com>
+
+* Move to new internal hashtable , removal of glib requirement
+* Simplification of build
+* Cleaner support for new platforms (OpenSolaris, Intel cc on Linux, MacOS)
+* Resync with memcached 1.4.1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG/MacGPG2 v2.0.12 (Darwin)
+
+iFYEABELAAYFAkrX38wACgkQqfzsjDO2F8NGMADfbbDwbNoUQpEZ47+d72LJubjM
+t9j1RKTRsns0/QDeLBnh2f6ldbeZ3zyhrtt86yCwl1ddJvR7ahesaw==
+=j1vP
+-----END PGP SIGNATURE-----
+</pre></div>
+
 <h2>Changes from release 0.9.5 to 0.9.6</h2>
 <div><img class="pie" src="http://chart.apis.google.com/chart?cht=p&amp;chs=400x300&amp;chd=s:eJJEEE&amp;chl=Dustin|Aliaksey|Matt|Cosimo|Steve|Trond" alt="contributors"/><pre>Release 0.9.6
 
@@ -41,8 +62,10 @@ iEYEABECAAYFAkqIR6sACgkQQM0/OE2fY9rkQQCgrcfx4J718kjeMSP2x2xpdrTj
 fq4AniDPIOGhuJaMV7IIiXClAtfTnBA0
 =trnz
 -----END PGP SIGNATURE-----
-</pre></div><h2>Changes from release 0.1.0 to 0.9.5</h2>
-<div><img class="pie" src="http://chart.apis.google.com/chart?cht=p&amp;chs=400x300&amp;chd=s:2EDA&amp;chl=Steve|Matt|Dustin|Eric" alt="contributors"/><pre>Release 0.9.5
+</pre></div>
+
+<h2>Changes from release 0.1.0 to 0.9.5</h2>
+<div><img class="pie" src="http://chart.apis.google.com/chart?cht=p&amp;chs=400x300&amp;chd=s:" alt="contributors"/><pre>Release 0.9.5
 
 Changes since 0.1.0:
 
@@ -77,7 +100,10 @@ iEYEABECAAYFAkqGVl8ACgkQQM0/OE2fY9o2NQCg1vpXlMkuUFA8j74VavJbPR53
 CkMAnjnn2VP8cXf+OKV3bMwMno7xLesP
 =Plkf
 -----END PGP SIGNATURE-----
-</pre></div><h2>Release 0.1.0</h2>
+</pre></div>
+
+
+<h2>Release 0.1.0</h2>
 <div><img class="pie" src="http://chart.apis.google.com/chart?cht=p&amp;chs=400x300&amp;chd=s:" alt="contributors"/><pre>First tag version for moxi, a memcached proxy.
 
 Based on memcached 1.3.3 from dustin/master.
